# mimir-0

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  mimir.toml.example  pyproject.toml
.github/workflows/: ci.yml
assets/: make_vision_probe.py  vision_probe.README.md
bench/: storage_throughput.py
docs/: API.md  BENCHMARK_SCHEDULER.md  BURST_WORKER.md  EXTENSIBILITY.md  INFERENCE_ENGINE.md  LIBRARY.md  SETUP.md  mimir_foundational_interview.md
examples/: quickstart.py
src/mimir/: __init__.py  brain.py  config.py  diagnostics.py  errors.py  interview.py  prompts.py  sanitize.py  selftest.py  server.py
src/mimir/cognition/: __init__.py  bake.py  benchmark.py  burst.py  citations.py  council.py  deep_idle.py  deliberation.py  epistemics.py  fleet.py  graph.py  identity.py  ingest.py  inner_life.py  library.py  narratives.py  notebook.py  onboarding.py  output_rag.py  procedural.py  recommended_models.toml  registry.py  self_model.py  sentinel.py  sleep.py  sleep_cycle.py  temporal.py  temporal_registry.py  tools.py  wiki.py  working_memory.py
src/mimir/context/: __init__.py  build.py  sections.py
src/mimir/documents/: __init__.py  chunk.py  extract.py
src/mimir/embed/: __init__.py  base.py  endpoint.py  locality.py
src/mimir/model/: __init__.py  discovery.py  gateway.py  latency.py  pool.py  priority.py  provider.py
src/mimir/retrieval/: __init__.py  hybrid.py
src/mimir/storage/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_acceptance_loop.py  test_auto_routing.py  test_bake.py  test_benchmark.py  test_build_context.py  test_burst.py  test_citations.py  test_council.py  test_deep_idle.py  test_deliberation.py  test_diagnostics.py  test_documents.py  test_documents_folder.py  test_embed_modes.py  test_epistemics.py  test_extensibility.py  test_fleet.py  test_forum.py  test_graph.py  test_history.py  test_identity.py  test_ingest.py  test_inner_life.py  test_latency.py  test_library.py  test_library_storage.py  test_model_pool.py  test_narratives.py  test_notebook.py  test_ollama_payload.py  test_onboarding.py  test_output_rag.py  test_procedural.py  test_recall.py  test_reembed.py  test_registry.py  test_retier.py  test_sanitize.py  (+15 more)
(+3 files in other folders)
