[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimir-0"
version = "0.0.1"
description = "A local-first cognition core: typed, evidence-tiered, provenance-tracked memory assembled into prompts with explicit epistemics."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "gurgon-ai" }]
keywords = ["memory", "cognition", "llm", "rag", "local-first", "epistemics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# THE LAW: core runs on Python + SQLite (stdlib) + one chat endpoint + one
# embeddings endpoint. Nothing else. Core has ZERO runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/gurgon-ai/mimir-0"
Source = "https://github.com/gurgon-ai/mimir-0"

[project.optional-dependencies]
# Heavy / optional things live behind extras, never in core (DESIGN §2).
ollama = []            # the reference Ollama adapter uses only stdlib urllib; extra reserved for future niceties
documents = ["pypdf>=4.0"]   # PDF extraction (plain text + markdown stay dependency-free in core)
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mimir"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
# E722 = bare except. We ban it explicitly: DESIGN §10 — no silent swallow.
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# server.py embeds a single-page UI (HTML/CSS/JS) as a string literal; line length doesn't
# apply to that template the way it does to Python source.
"src/mimir/server.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/mimir"]
warn_unused_ignores = true
